--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,8 @@
 body {
   background-color: rgb(29, 158, 197);
   margin: 0;
+  max-width: 100vw;
+  height: 100vh;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
